# mdtablefix

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contents.md  developers-guide.md  documentation-style-guide.md  footnote-conversion.md  html-table-support.md  markdown-stream-processor.md  module-relationships.md  parallel-processing-roadmap.md  rayon-concurrency.md  release-process.md  repository-layout.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md  state-machine-abstractions-roadmap.md  trailing-spaces.md  unicode-width.md  users-guide.md
docs/adrs/: 0001-table-reflow-pipeline.md  0002-textwrap-inline-wrapping.md  0002-textwrap-wrapping-engine.md  0003-date-sequences-as-inline-fragments.md  0004-state-machine-abstractions.md  0005-ellipsis-literal-regions.md
docs/execplans/: cli-matrix-testing.md  issue-262-nested-code-block-handling.md  parallel-processing-roadmap.md  replace-bespoke-wrapping-with-textwrap-and-unicode-width.md  yaml-frontmatter.md
proptest-regressions/reflow/: tests.txt
src/: breaks.rs  code_emphasis.rs  ellipsis.rs  fences.rs  fences_properties.rs  footnotes.rs  frontmatter.rs  headings.rs  html.rs  html_tests.rs  io.rs  lib.rs  lists.rs  macros.rs  main.rs  process.rs  reflow.rs  table.rs  test_utils.rs  textproc.rs  tokenize.rs  wrap.rs
src/ellipsis/: protected.rs
test-macros/: Cargo.toml
tests/: breaks.rs  cli.rs  cli_fences.rs  cli_frontmatter.rs  cli_frontmatter_snapshots.rs  cli_matrix.rs  code_emphasis.rs  compile.rs  fences.rs  footnotes.rs  integration.rs  leading_indent_snapshots.rs  lists.rs  markdownlint.rs  parallel.rs  prelude.rs  process_frontmatter.rs  process_frontmatter_props.rs  process_frontmatter_snapshots.rs  reference_link_properties.rs  table.rs  table_continuations.rs  table_examples.rs  table_fixtures.rs  textproc_properties.rs  wrap.rs  wrap_blockquotes.rs  wrap_cli.rs  wrap_code_span_reflow_properties.rs  wrap_footnotes.rs  wrap_leading_spaces.proptest-regressions  wrap_leading_spaces.rs  wrap_misc.rs  wrap_paragraphs_lists.rs  wrap_properties.rs  wrap_renumber.rs  wrap_unit.rs
(+303 files in other folders)
