[package]
name = "mdtablefix"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
rayon = "1.11"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
unicode-width = "0.2"


[dev-dependencies]
rstest = "0.26"
assert_cmd = "2"
tempfile = "3"
libc = "0.2.174"
predicates = "3"

[lints.clippy]
pedantic = "warn"
