[package]
name = "mdtablefix"
version = "0.4.0"
edition = "2024"
rust-version = "1.89"
license = "ISC"
repository = "https://github.com/leynos/mdtablefix"
description = """
`mdtablefix` unb0rks and reflows Markdown tables so that each column has a uniform width. When \
the `--wrap` option is used, it also wraps paragraphs and list items to 80 columns."""

[package.metadata.binstall]

[package.metadata.binstall.overrides.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "aarch64"), target_env = "gnu"))']
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
rayon = "1.11"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
textwrap = "0.16.2"
unicode-width = "0.1"


[dev-dependencies]
rstest = "0.26"
assert_cmd = "2"
insta = "1"
tempfile = "3"
libc = "0.2.174"
predicates = "3"

[lints.clippy]
pedantic = "warn"
